--- a/src/components/contact/contactContent.module.css
+++ b/src/components/contact/contactContent.module.css
@@ -35,11 +35,12 @@
 }
 
 .lead {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin-bottom: $space-xs;
   text-align: center;
 
   @media screen and (min-width: $viewport-xsmall) {
+    font-size: 1.5rem;
     margin-bottom: $space-s;
     text-align: left;
   }
@@ -56,7 +57,7 @@
 }
 
 .paragraph {
-  font-size: 1rem;
+  font-size: .8rem;
   line-height: 1rem;
   margin-bottom: $space-s;
   text-align: justify;
